1.7.244 Make "ion" selection atomic number and bond based.

1.7.243 Python3.7.

1.7.242 Atomselection bug for 'all'.

1.7.241 Fix for dms-dump.
          Docs for molfile trajectory writing.
          Triclinic support for pfx.
          Add dms-validate check for virtuals in multiple virtual tables.

1.7.240 Added ReplaceTableWithSortedTerms.
          Implement dms-diff in python instead of shell.
          Fix the Graph.atoms method.
          Use inchi/1.05.
          Make msys.Graph check for duplicates.
          Tweaks to the build for external users.

1.7.239 DESRESCode#3974: Fix some broken tool scripts.

1.7.238 Fix broken lib-python3 from 1.7.237.
          DESRESCode#3964: fix mol2 reading and writing.

1.7.237 Use new sconsutils; should affect developers only.

1.7.235 Add a 'moe' option to msys.SaveMol2 to output guanidinium
          groups MOE can will parse correctly. This option is turned
          on by default as it seems _most_ tools handle this variant
          fine.

1.7.233 Fix dms-dump (broken since 1.7.230).
          Added SpatialHash::findPairlist.
          Better verbosity API for validate.

1.7.232 Use python/2.7.15 and 3.6.6 megamodules.
          Update boost from 1.63 to 1.67.
          Add bindings for System.addProvenance.

1.7.230 Added virtual_lc1 schema
          Fix for dms-dump with .sqliterc files
          Unused param fix for v2 compatibility

1.7.229 Added dtr_frame_{from,as}_bytes.

1.7.228 Added msys.FormatDMS.
          Pickled systems use zlib; 3-20x smaller pickles.
          FindDistinctFragment returns full map of equivalent fragments.
          
1.7.227 Support K+ as an ion residue name.
          Include tempered_nonbonded and modified_interaction in dms-dump
          Add table schemas for constraint_ahNR

1.7.226 Fix molfile.StkFile for python3
          Use new megamodules (-03c7).
          Check for atom count consistency in stks.
          dtr-validate: add check for constrained hydrogens.