@@ -1,4 +1,5 @@
 1.7.244 Make "ion" selection atomic number and bond based.
+        Change old "ion" selection to "legacy_ion".
 
 1.7.243 Python3.7.
 
